# TorchStep

./: .gitignore  404.html  README.md  config.sh  engine.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
docs/: index.md  reference.md
engine/: __init__.py  callback.py  callback_handler.py  checkpoint_handler.py  device_handler.py  engine.py  gradient_handler.py  hook_handler.py  learning_rate_handler.py  optimizer_handler.py  result_handler.py  tensorboard_handler.py  torchinfo_handler.py  utils.py
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/engine/: device_handler.py  hook_handler.py  torchinfo_handler.py
src/sstorch/learner/: __init__.py  callback_handler.py  checkpoint_handler.py  learner.py  lr_handler.py  main_handler.py  optimizer_handler.py  result_handler.py  torchinfo_handler.py  utils.py
src/sstorch/vision/: __init__.py  alexnet.py  cam.py  cifar100.py  googlenet.py  inception.py  lenet.py  models.py  resnet.py  tinyvgg.py  vgg.py
src/vision_utils/: cam.py  utils.py  vision_metrics.py
src/vision_utils/ssd/: prior.py
tutorials/: index.html
vision_utils/: __init__.py  cam.py  get_images.py  models.py  selective_search.py  utils.py  vision_metrics.py
vision_utils/ssd/: __init__.py  multibox.py  ssd_resnetbackbone.py  ssdmain.py  utils.py
