[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sstorch"
version = "0.0.1"
authors = [
  { name="Ronald Chung", email="hoi.k.chung@gmail.com" },
]
description = "Self-Study-Torch (sstorch) is a PyTorch library for self-studying"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.25.2",
    "tqdm >= 4.66.2",
    "torch",
    "torchvision",
    "matplotlib >= 3.7.1",
    "pillow >= 9.4.0",
    "setuptools >= 67.7.2",
    "tensorboard >= 2.15.2",
    "torchinfo >= 1.8.0",
    "scikit-image >= 0.19.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ['pytorch']